Fixed overflow support

--- a/app/styles/menu.css
+++ b/app/styles/menu.css
@@ -38,8 +38,13 @@
   border-radius: 0;
   visibility: hidden;
   transition-delay: 0.3s;
+  /* max-height: calc(100vh - 120px);
+  overflow: auto*/
+}
+
+.dropdown-overflow {
   max-height: calc(100vh - 120px);
-  overflow: auto
+  overflow-y: auto
 }
 
 .dropdown-submenu:hover > .dropdown-menu {
